--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,46 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    android:id="@+id/card"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutSheetsItems"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginTop="8dp"
-    app:cardBackgroundColor="@color/colorAccent"
-    app:cardCornerRadius="2dp"
-    tools:ignore="RtlHardcoded,RtlSymmetry">
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
+    android:paddingLeft="15dp"
+    android:background="@drawable/cell_shape_grey3"
+    android:paddingTop="5dp" >
 
-    <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:padding="16dip"
-        android:background="?android:attr/selectableItemBackground"
-        android:clickable="true">
+<!--   android:background="@drawable/cell_shape_darkness2_transparent4" -->
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            tools:text="#2196F3"/>
+    <TextView
+        android:id="@+id/txtCallPhone"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginRight="15dp"
+        android:layout_toLeftOf="@+id/tvAmountPos"
+       
+        android:inputType="textMultiLine"
+        android:text="Terminal VX 675  "
+        android:textColor="@color/grey3"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:text="01:23:45"
-            tools:ignore="HardcodedText" />
+    <TextView
+        android:id="@+id/tvAmountPos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:inputType="number|textMultiLine"
+        android:maxLines="2"
+        android:text="10000"
+        android:textColor="@color/grey3"
+        android:textSize="16dp"
+        android:textStyle="bold" />
 
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
