--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,47 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/layoutSheetsItems"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="5dp"
-    android:paddingLeft="15dp"
-    android:background="@drawable/cell_shape_grey3"
-    android:paddingTop="5dp" >
+                android:id="@+id/layoutSheetsItems"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/cell_shape_grey3"
+                android:paddingBottom="5dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="5dp">
 
-<!--   android:background="@drawable/cell_shape_darkness2_transparent4" -->
+    <!--   android:background="@drawable/cell_shape_darkness2_transparent4"
+     -->
 
     <TextView
-        android:id="@+id/txtCallPhone"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toLeftOf="@+id/tvAmountPos"
-       
+
         android:inputType="textMultiLine"
         android:text="Terminal VX 675  "
-        android:textColor="@color/grey3"
+        android:textColor="@color/white"
         android:textSize="16dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvAmountPos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="5dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_centerVertical="true"
         android:gravity="center"
         android:inputType="number|textMultiLine"
         android:maxLines="2"
         android:text="10000"
-        android:textColor="@color/grey3"
+        android:textColor="@color/white"
         android:textSize="16dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
 </RelativeLayout>
