--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,6 +7,14 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
     android:background="@color/greyLight">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="162dp"
+        android:src="@drawable/icm_invent_logo_size_200"/>
+
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
@@ -50,34 +58,7 @@
                 android:textColorHint="@color/white"
                 android:textSize="20dp" />
         </RelativeLayout>
-
-        <!--<ImageView-->
-        <!--android:id="@+id/imageErrorLogin"-->
-        <!--android:layout_width="25dp"-->
-        <!--android:layout_height="25dp"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_marginRight="20dp"-->
-        <!--android:alpha="1"-->
-        <!--android:src="@drawable/ic_error_black_24dp"-->
-        <!--android:tint="@color/red"/>-->
     </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/layoutLogo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_above="@+id/btnGoToFile"
-        android:layout_below="@+id/relativeLayout1"
-        android:background="@drawable/centered_background_logo">
-
-        <Button
-            android:id="@+id/bProgressDialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="progress dialog test"/>
-    </LinearLayout>
 
     <Button
         android:id="@+id/btnOpenFile"
@@ -91,10 +72,4 @@
         android:text="Wczytaj plik csv"
         android:textSize="17dp" >
     </Button>
-
-
-
-
-
-
 </RelativeLayout>
