--- a/app/src/main/res/layout/fragment_scan_positions.xml
+++ b/app/src/main/res/layout/fragment_scan_positions.xml
@@ -3,22 +3,51 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:layout_marginTop="85dp"
               android:background="@color/greyLight"
               android:orientation="vertical"
               android:paddingLeft="@dimen/activity_horizontal_margin"
               android:paddingRight="@dimen/activity_horizontal_margin">
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/sectionLogo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgScann"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/scann_code"/>
+
+
+        <TextView
+            android:id="@+id/tvScanCode"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="Zeskanuj Kod"
+            android:textColor="@color/grey3"
+            android:textSize="26dp"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/sectionScann"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tvLokalization"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginTop="85dp"
             android:background="@drawable/cell_shape_grey3"
             android:gravity="center"
             android:text="Lokalizacja Testowa 1"
@@ -49,7 +78,7 @@
                     android:layout_centerVertical="true"
                     android:alpha="1"
                     android:text="EAN:     "
-                    android:textColor="@color/grey3"
+                    android:textColor="@color/grey1"
                     android:textSize="17dp"/>
             </RelativeLayout>
 
@@ -86,7 +115,7 @@
             android:layout_below="@+id/relativeLayout1"
             android:layout_marginTop="22dp"
             android:background="@drawable/cell_shape_grey2"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:id="@+id/layoutLoginPart"
@@ -104,26 +133,26 @@
                     android:alpha="1"
                     android:src="@drawable/scan_ean"
                     android:text="Nazwa:"
-                    android:textColor="@color/grey3"
+                    android:textColor="@color/grey1"
                     android:textSize="17dp"/>
 
                 <TextView
                     android:id="@+id/tvName"
-                    android:padding="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
-                    android:gravity="start|center_vertical"
                     android:layout_marginStart="10dp"
-                    android:minLines="2"
                     android:layout_toRightOf="@+id/txtNameLabel"
+                    android:gravity="start|center_vertical"
                     android:inputType="textMultiLine"
+                    android:minLines="2"
+                    android:padding="5dp"
                     android:text="Nazwa Testowa"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="16dp">
+                    android:textSize="16dp"
+                    android:textStyle="bold">
 
                     <requestFocus/>
                 </TextView>
@@ -138,7 +167,7 @@
             android:layout_below="@+id/sectionName"
             android:layout_marginTop="19dp"
             android:background="@drawable/cell_shape_grey2"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:id="@+id/layoutLoginSeries"
@@ -156,7 +185,7 @@
                     android:alpha="1"
                     android:src="@drawable/scan_ean"
                     android:text="Ilość Zeskanowana: "
-                    android:textColor="@color/grey3"
+                    android:textColor="@color/grey1"
                     android:textSize="17dp"/>
 
                 <TextView
@@ -171,42 +200,11 @@
                     android:inputType="textPersonName"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="16dp"/>
+                    android:textSize="16dp"
+                    android:textStyle="bold"/>
             </RelativeLayout>
         </RelativeLayout>
 
-        <LinearLayout
-            android:id="@+id/layoutBtns"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="10dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnSearchPosition"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:onClick="onClickBtnSearchPosition"
-                android:text="Szukaj"
-                android:textSize="17dp"/>
-
-            <Button
-                android:id="@+id/btnNewPosition"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_weight="1"
-                android:onClick="onClickBtnNewPosition"
-                android:text="Nowa pozycja"
-                android:textSize="17dp"/>
-        </LinearLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
