--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,9 @@
 
             <ImageView
                 android:layout_width="187dp"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:paddingRight="10dp"
-                android:src="@drawable/icm_inw_napis_logo"
-
+                android:src="@drawable/icminwentory_title"
                 />
 
         </android.support.v7.widget.Toolbar>
