--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -3,9 +3,8 @@
                 android:layout_width="300dp"
                 android:layout_height="180dp"
                 android:layout_gravity="center"
-                android:padding="20dp"
+                android:padding="5dp"
     >
-
 
     <TextView
         android:id="@+id/tvTitle"
@@ -13,16 +12,20 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Trwa zapis do pliku csv..."
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="Brak pozycji o takim kodzie. Utworzyć nową?"
         android:textSize="20dp"/>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
+
+    <Button
+        android:id="@+id/bOk"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"/>
+        android:layout_below="@id/tvTitle"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
+        android:text="OK"/>
+
 
 </RelativeLayout>
