--- a/app/src/main/res/layout/fragment_new_position.xml
+++ b/app/src/main/res/layout/fragment_new_position.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btnSave"
-        android:layout_below="@+id/txtNameLokalization"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp">
 
@@ -44,8 +43,8 @@
                         android:textStyle="bold"/>
 
 
-                <TextView
-                    android:id="@+id/tvCode"
+                <EditText
+                    android:id="@+id/etCode"
                     android:layout_width="match_parent"
                     android:layout_toRightOf="@+id/txtCodeLabel"
                     android:layout_height="wrap_content"
