Added new Item button.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
         <color name="lightgreen400">#9ccc65</color>
         <color name="darkGrey">#49504b</color>
         <color name="grey">#bdbdbd</color>
+        <color name="colorLogo">#cece71</color>
         <color name="green600">#43a047</color>
         <color name="navigationBarColor">#000000</color>
         <color name="colorPrimary">#125688</color>
