--- a/app/src/main/res/layout-v21/fragment_scan_positions.xml
+++ b/app/src/main/res/layout-v21/fragment_scan_positions.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -47,7 +48,6 @@
             android:src="@drawable/ic_plus_white_18dp"/>
 
     </RelativeLayout>
-
 
     <LinearLayout
         android:id="@+id/sectionScann"
