--- a/app/src/main/res/layout/fragment_new_position.xml
+++ b/app/src/main/res/layout/fragment_new_position.xml
@@ -4,7 +4,6 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="80dp"
                 android:background="@color/greyLight"
-                android:orientation="vertical"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin">
 
@@ -21,10 +20,24 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
+            <TextView
+                android:id="@+id/tvLokalization"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:background="@drawable/cell_shape_grey3"
+                android:gravity="center"
+                android:text="Lokalizacja Testowa 1"
+                android:textColor="@color/white"
+                android:textSize="18dp"/>
+
+
             <RelativeLayout
                 android:id="@+id/rlCode"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="10dp"
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/cell_shape_btn_return_item_dark">
 
@@ -38,6 +51,7 @@
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/scan_ean"
                         android:text="Kod: "
+                        android:layout_marginTop="10dp"
                         android:textColor="@color/clearWhite"
                         android:textSize="17dp"
                         android:textStyle="bold"/>
