--- a/app/src/main/res/layout/fragment_scan_list.xml
+++ b/app/src/main/res/layout/fragment_scan_list.xml
@@ -32,7 +32,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp"
-            android:text="Suma sztuk"
+            android:text="@string/sum"
             android:textColor="@color/grey3"
             android:textSize="18dp"
             android:textStyle="bold" />
