--- a/app/src/main/res/layout-v21/fragment_scan_positions.xml
+++ b/app/src/main/res/layout-v21/fragment_scan_positions.xml
@@ -31,7 +31,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/imgScann"
             android:gravity="center"
-            android:text="Zeskanuj Kod"
+            android:text="@string/scan_code"
             android:textColor="@color/grey3"
             android:textSize="26dp"
             android:textStyle="bold"/>
@@ -63,7 +63,6 @@
             android:layout_alignParentLeft="true"
             android:background="@drawable/cell_shape_grey3"
             android:gravity="center"
-            android:text="Lokalizacja Testowa 1"
             android:textColor="@color/white"
             android:textSize="18dp"/>
 
@@ -111,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/layoutLogin"
-                android:hint="Zeskanuj kod EAN"
+                android:hint="@string/scan_ean"
                 android:inputType="textPersonName"
                 android:maxLength="13"
                 android:singleLine="true"
@@ -145,7 +144,7 @@
                     android:layout_centerVertical="true"
                     android:alpha="1"
                     android:src="@drawable/scan_ean"
-                    android:text="Nazwa:"
+                    android:text="@string/name"
                     android:textColor="@color/grey1"
                     android:textSize="17dp"/>
 
@@ -197,7 +196,7 @@
                     android:layout_centerVertical="true"
                     android:alpha="1"
                     android:src="@drawable/scan_ean"
-                    android:text="Ilość Zeskanowana: "
+                    android:text="@string/scanned_amount"
                     android:textColor="@color/grey1"
                     android:textSize="17dp"/>
 
