--- a/app/src/main/res/layout/dialog_change_amount.xml
+++ b/app/src/main/res/layout/dialog_change_amount.xml
@@ -72,7 +72,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:alpha="1"
-            android:text="Ilosc:"
+            android:text="@string/amount"
             android:textColor="@color/grey3"
             android:textSize="18dp" />
     </RelativeLayout>
