--- a/app/src/main/res/layout/dialog_new_position.xml
+++ b/app/src/main/res/layout/dialog_new_position.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Brak pozycji o takim kodzie. Utworzyć nową?"
+        android:text="@string/no_tem_for_code"
         android:textSize="20dp"/>
 
     <LinearLayout
@@ -29,14 +29,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="NIE"/>
+            android:text="@string/no"/>
 
         <Button
             android:id="@+id/bYes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TAK"/>
+            android:text="@string/yes"/>
     </LinearLayout>
 
 </RelativeLayout>
