--- a/app/src/main/res/layout/fragment_choose_location.xml
+++ b/app/src/main/res/layout/fragment_choose_location.xml
@@ -12,8 +12,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginTop="?attr/actionBarSize"
         android:gravity="center"
-        android:text="Wybór lokalizacji"
+        android:text="@string/choose_location"
         android:textColor="@color/white"
+        android:textStyle="bold"
         android:textSize="18dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
