--- a/app/src/main/res/layout/fragment_new_position.xml
+++ b/app/src/main/res/layout/fragment_new_position.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/btnSave"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginBottom="10dp">
 
 
         <LinearLayout
@@ -28,7 +27,6 @@
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/cell_shape_grey3"
                 android:gravity="center"
-                android:text="Lokalizacja Testowa 1"
                 android:textColor="@color/white"
                 android:textSize="18dp"/>
 
@@ -37,43 +35,43 @@
                 android:id="@+id/rlCode"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginTop="10dp"
                 android:layout_alignParentLeft="true"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/cell_shape_btn_return_item_dark">
 
 
-                    <TextView
-                        android:id="@+id/txtCodeLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:alpha="1"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/scan_ean"
-                        android:text="Kod: "
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/clearWhite"
-                        android:textSize="17dp"
-                        android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/txtCodeLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:alpha="1"
+                    android:src="@drawable/scan_ean"
+                    android:text="@string/code"
+                    android:textColor="@color/clearWhite"
+                    android:textSize="17dp"
+                    android:textStyle="bold"/>
 
 
                 <EditText
                     android:id="@+id/etCode"
                     android:layout_width="match_parent"
-                    android:layout_toRightOf="@+id/txtCodeLabel"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="50dp"
-                    android:ems="10"
                     android:layout_marginLeft="10dp"
-                    android:hint="kod towaru"
+                    android:layout_marginRight="50dp"
+                    android:layout_toRightOf="@+id/txtCodeLabel"
+                    android:ems="10"
+                    android:hint="@string/enter_code"
                     android:inputType="textPersonName"
                     android:singleLine="true"
-                    android:textColor="@color/clearWhite"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="@color/clearWhite"
+                    android:textColor="@color/white"
                     android:textSize="17dp"
-                    android:textStyle="bold"/>
+                    />
             </RelativeLayout>
 
             <RelativeLayout
@@ -103,10 +101,10 @@
                         android:layout_marginTop="10dp"
                         android:alpha="1"
                         android:src="@drawable/scan_ean"
-                        android:text="Nazwa:"
-                        android:textStyle="bold"
+                        android:text="@string/name"
                         android:textColor="@color/clearWhite"
-                        android:textSize="17dp"/>
+                        android:textSize="17dp"
+                        android:textStyle="bold"/>
 
                     <EditText
                         android:id="@+id/etName"
@@ -116,12 +114,91 @@
                         android:layout_below="@+id/txtNameLabel"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
+                        android:hint="@string/enter_name"
                         android:inputType="textMultiLine"
                         android:text=""
-                        android:textColor="@color/grey3"
+                        android:textColorHint="@color/clearWhite"
+                        android:textColor="@color/white"
                         android:textSize="17dp"
                         />
                 </RelativeLayout>
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+
+                <RelativeLayout
+                    android:id="@+id/rlAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="30dp"
+                    >
+
+                    <ImageView
+                        android:id="@+id/imgRemoveAmount"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_toEndOf="@+id/textAmount"
+                        android:layout_toRightOf="@+id/textAmount"
+                        android:background="@drawable/circle_shape"
+                        android:onClick="onClickRemoveAmountStandard"
+                        android:src="@drawable/ic_remove_circle_black_24dp"
+                        android:tint="@color/red200"/>
+
+                    <TextView
+                        android:id="@+id/tvAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/textAmount"
+                        android:layout_toEndOf="@+id/imgRemoveAmount"
+                        android:layout_toRightOf="@+id/imgRemoveAmount"
+                        android:gravity="center"
+                        android:maxLength="10"
+                        android:maxWidth="110dp"
+                        android:minEms="3"
+                        android:minWidth="30dp"
+                        android:singleLine="true"
+                        android:text="1"
+                        android:textColor="@color/greyText"
+                        android:textColorHint="@color/white"
+                        android:textSize="17dp"
+                        android:textStyle="bold"/>
+
+                    <ImageView
+                        android:id="@+id/imgAddAmount"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_alignTop="@+id/imgRemoveAmount"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_toEndOf="@+id/tvAmount"
+                        android:layout_toRightOf="@+id/tvAmount"
+                        android:alpha="1"
+                        android:background="@drawable/circle_shape"
+                        android:onClick="onClickAddAmountStandard"
+                        android:src="@drawable/ic_add_circle_black_24dp"
+                        android:tint="@color/teal200"/>
+
+                    <TextView
+                        android:id="@+id/textAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:alpha="1"
+                        android:text="@string/amount"
+                        android:textColor="@color/grey3"
+                        android:textSize="18dp"/>
+                </RelativeLayout>
+
             </RelativeLayout>
 
             <RelativeLayout
@@ -131,8 +208,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/txtNameTitle"
                 android:layout_marginTop="10dp"
-                android:visibility="gone"
-                android:background="@drawable/cell_shape_btn_return_item">
+                android:background="@drawable/cell_shape_btn_return_item"
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:id="@+id/rlUnit2"
@@ -149,10 +226,10 @@
                         android:layout_centerVertical="true"
                         android:alpha="1"
                         android:src="@drawable/scan_ean"
-                        android:text="J. miary:"
+                        android:text="@string/Unit"
                         android:textColor="@color/clearWhite"
-                        android:textStyle="bold"
-                        android:textSize="17dp"/>
+                        android:textSize="17dp"
+                        android:textStyle="bold"/>
                 </RelativeLayout>
 
                 <EditText
@@ -184,7 +261,7 @@
         android:layout_marginBottom="15dp"
         android:background="@drawable/cell_shape_grey3"
         android:onClick="onClickBtnSave"
-        android:text="Zapisz"
+        android:text="@string/save"
         android:textColor="#fff"
         android:textSize="17dp"/>
 
